[package]
name = "imy"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "CLI for converting images"
repository = "https://github.com/hpatjens/imy"
readme = "README.md"

[dependencies]
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ignore = "0.4"

[dev-dependencies]
tempdir = "0.3"